Add Drafts implementation with Redis
